--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,6 @@ a {
   background-color: #4a4a4a;
 }
 
-/* TODO: Replace with image later */
 #header {
   background-color: #484848 !important;
   color: #fff;
@@ -349,21 +348,30 @@ span {
   padding: 5px;
 }
 
-#lets-connect {
-  text-align: center;
+#map {
+  display: block;
+  margin: 0;
+  height: 100%
+}
+
+#footer {
+  background-color: #212121;
+  padding-top: 1%;
 }
 
 /* Media queries to handle various device widths */
-
 @media only screen and (max-width: 1024px) {
-  #lets-connect {
-    margin-top: 5%;
+  #map {
+    height: 95%;
   }
 }
 
 @media only screen and (max-width:900px) {
   .biopic-container {
     width: 175px;
+  }
+  #map {
+    height: 90%;
   }
 }
 
@@ -376,12 +384,6 @@ span {
     height: 150px;
     margin: 0 auto;
   }
-}
-
-#map {
-  display: block;
-  height: 100%;
-  margin: 0;
 }
 
 #map-div {
@@ -405,8 +407,8 @@ span {
   #top-contacts {
     font-size: 14px;
   }
-  #lets-connect {
-    margin-top: 15%;
+  #map {
+    height: 80%;
   }
 }
 
