--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ h5 {
 
 .contact-img {
   width: 24px;
+  height: 24px;
   padding: 0 10px;
   margin: 0;
   vertical-align: text-bottom;
@@ -323,7 +324,8 @@ ul {
 }
 
 .biopic {
-  width: 100%;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
 }
 
@@ -340,7 +342,8 @@ ul {
 }
 
 .project-img {
-  width: 100%;
+  width: 300px;
+  height: 168px;
   border: #646464 solid 1px;
 }
 
