--- a/css/style.css
+++ b/css/style.css
@@ -324,8 +324,8 @@ ul {
 }
 
 .biopic {
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  height: auto;
   border-radius: 50%;
 }
 
@@ -370,9 +370,6 @@ span {
 }
 
 @media only screen and (max-width:900px) {
-  .biopic-container {
-    width: 175px;
-  }
   #map {
     height: 90%;
   }
@@ -383,7 +380,7 @@ span {
     margin-top: 10%;
   }
   .biopic-container {
-    width: 150px;
+    width: 200px;
     margin: 0 auto;
   }
 }
